Fixed bug #44226 (Throwing an exception causes crash in multithreaded SAPI)